# robot-fisheye-link-calibration

./: .gitignore  AGENTS.md  MILESTONES.md  README.md  README_setup.md  dev_prompt_v5_clean_first_milestone.txt  pyproject.toml  requirements.txt
calibration_pipeline/: __init__.py  camera_frame_adapter.py  camera_model.py  charuco_config.py  charuco_detector.py  dataset_loader.py  dataset_sanity.py  depth_model_compat.py  evaluation.py  final_calibration_export.py  kinematics_provider.py  link_calibrator.py  pose_from_charuco.py  run_calibration_evaluation.py  run_charuco_detection.py  run_dataset_sanity_check.py  run_depth_model_compat_export.py  run_export_final_camera_poses.py  run_final_calibration_export.py  run_integrity_check.py  run_link_calibration.py  run_pose_from_charuco.py  run_shared_board_recovery.py  run_static_calibration_pipeline.py  se3_utils.py  shared_board_recovery.py
calibration_pipeline/calibration_evaluation/: __init__.py  metrics.py  (+2 more)
docs/: DATASET_FORMAT.md  FRAME_CONVENTIONS.md  INPUT_FILE_SAMPLES.md  NEW_DATASET_CHECKLIST.md  OUTPUTS.md  QUICKSTART_NEW_DATASET.md  RUN_PIPELINE.md
tests/: test_calibration_evaluation.py  test_camera_frame_adapter.py  test_camera_model.py  test_charuco_config.py  test_charuco_detector.py  test_dataset_loader.py  test_dataset_sanity.py  test_depth_model_compat.py  test_environment.py  test_final_calibration_export.py  test_gt_consistency.py  test_kinematics_provider.py  test_link_calibrator.py  test_pose_from_charuco.py  test_se3_utils.py  test_shared_board_recovery.py  test_static_calibration_pipeline.py
(+9 files in other folders)
