[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "calibration-pipeline"
version = "0.1.0"
description = "Offline multi-pose camera calibration pipeline"
readme = "README_setup.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "numpy>=1.24,<3",
  "scipy>=1.10,<2",
  "pandas>=2,<3",
  "opencv-contrib-python>=4.8,<5",
  "matplotlib>=3.7,<4",
  "tqdm>=4.65,<5",
]

[project.optional-dependencies]
test = ["pytest>=7.4,<9"]

[tool.setuptools]
packages = ["calibration_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

